--- a/templates/admin/notas.html
+++ b/templates/admin/notas.html
@@ -14,18 +14,18 @@ seccion administration juegotes
                 <div class="card-body">
                     <form action="/admin/notas/guardar" method="post" enctype="multipart/form-data">
                     <div class="mb-3">
-                      <label for="txtNombre" class="form-label">Titulo</label>
+                      <label for="txtNombre" class="form-label">TITULO</label>
                       <input type="text"
                         class="form-control" name="txtNombre" id="txtNombre" aria-describedby="helpId" placeholder="Ingrese el nombre:">
                     </div>
                     <div class="mb-3">
-                            <label for="Subtitulo" class="form-label">Subtitulo</label>
+                            <label for="Subtitulo" class="form-label">SUBTITULO</label>
                             <input type="text"
                               class="form-control" name="Subtitulo" id="Subtitulo" aria-describedby="helpId" placeholder="Escoja un subtitulo:">
                           </div>
                     </div>
                     <div class="mb-3">
-                        <label for="txtImagen" class="form-label">Imagen</label>
+                        <label for="txtImagen" class="form-label">IMAGEN</label>
                         <input type="file"
                           class="form-control" name="txtImagen" id="txtImagen" aria-describedby="helpId" placeholder="Seleccione una imagen:">
                       </div>
