--- a/templates/admin/notas.html
+++ b/templates/admin/notas.html
@@ -45,9 +45,9 @@ seccion administration juegotes
                     <thead>
                         <tr>
                             <th scope="col">ID</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Imagen </th>
-                            <th scope="col">Precio</th>
+                            <th scope="col">NOMBRE</th>
+                            <th scope="col">IMAGEN </th>
+                            <th scope="col">PRECIO</th>
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
