--- a/templates/sitio/login.html
+++ b/templates/sitio/login.html
@@ -31,7 +31,7 @@
               
                 <div class="mb-3">
                     <label for="" class="form-label">Usuario</label>
-                    <input type="text" class="form-control" name="txtnombre" id="txtnombre" aria-describedby="emailHelpId" placeholder="Usuario">
+                    <input type="text" class="form-control" name="txtuser" id="txtuser" aria-describedby="emailHelpId" placeholder="Usuario">
                     <small id="emailHelpId" class="form-text text-muted"></small>
                   </div>
 
